responsive for Mobile phone

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Amity Infotech</title>
+    <title> Amity Infotech</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -13,11 +13,11 @@
 
     <!-- Header / Navigation -->
 
-    
+
     <header>
         <nav>
             <div class="logo">
-                <h1>Amity  Infotech</h1>
+                <h1>Amity Infotech</h1>
             </div>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
@@ -39,14 +39,14 @@
 
     <section id="home" class="hero">
         <div class="hero-content">
-            <h2>Welcome to Amity  Infotech <br> This is My Web - Site </h2>
+            <h2>Welcome to Amity Infotech <br> This is My Web - Site </h2>
 
             <p>Your partner in innovative technology solutions</p>
             <a href="#contact" class="btn">Get in Touch</a>
         </div>
     </section>
 
-    
+
     <!-- About Us Section -->
 
 
@@ -54,7 +54,8 @@
 
     <section id="about" class="about">
         <h2>About Us</h2>
-        <p>We specialize in web and mobile application development, providing solutions tailored to your business needs.</p>
+        <p>We specialize in web and mobile application development, providing solutions tailored to your business needs.
+        </p>
     </section>
 
 
@@ -71,11 +72,11 @@
             <h3>Web Development</h3>
             <p>Build dynamic websites to improve your business online presence.</p>
         </div>
-        <div class="service-card">
+        <div class="service-card1">
             <h3>Mobile App Development</h3>
             <p>Design and develop mobile apps for both Android and iOS.</p>
         </div>
-        <div class="service-card">
+        <div class="service-card2">
             <h3>Cloud Solutions</h3>
             <p>Deploy your business to the cloud for scalability and performance.</p>
         </div>
@@ -115,7 +116,7 @@
 
 
     <footer>
-        <p>&copy; 2025 Amity  Infotech by Amit Thakur. All rights reserved.</p>
+        <p>&copy; 2025 Amity Infotech by Amit Thakur. All rights reserved.</p>
     </footer>
 
 </body>
