click here to me

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title> Amity Infotech</title>
+    <title> Amit Infotech</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -17,7 +17,7 @@
     <header>
         <nav>
             <div class="logo">
-                <h1>Amity Infotech</h1>
+                <h1>  &nbsp;   Amit Infotech</h1>
             </div>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
@@ -39,9 +39,10 @@
 
     <section id="home" class="hero">
         <div class="hero-content">
-            <h2>Welcome to Amity Infotech <br> This is My Web - Site </h2>
+            <h2>Welcome to Amit Infotech <br> This is My Web - Site </h2>
 
-            <p>Your partner in innovative technology solutions</p>
+            <p>Your partner in innovative technology solutions </p>
+            <a class=" click" href=" https://amitbhallvi.github.io/Profile-Card/" target="_blank"> Click Here To Contact Me </a>
             <a href="#contact" class="btn">Get in Touch</a>
         </div>
     </section>
