--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
 
     <footer>
-        <p>&copy; 2025 Amity Infotech by Amit Thakur. All rights reserved.</p>
+        <p>&copy; 2025 Amit Infotech by ®️ Amit Thakur. All rights reserved.</p>
     </footer>
 
 </body>
