git add .     git commit -m"final updates"     git push -u origin main

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <nav>
             <div class="logo">
-                <h1>&nbsp;   Amit Infotech</h1>
+                <h1>&nbsp; Amit Infotech</h1>
             </div>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
@@ -30,21 +30,27 @@
 
 
 
-
     <!-- Hero Section -->
 
 
 
-
-
     <section id="home" class="hero">
+
+
         <div class="hero-content">
+
             <h2>Welcome to Amit Infotech <br> This is My Web - Site </h2>
 
             <p>Your partner in innovative technology solutions </p>
-            <a class=" click" href=" https://amitbhallvi.github.io/Profile-Card/" target="_blank"> Click Here To Contact Me </a>
+
+            <a class=" click" href=" https://amitbhallvi.github.io/Profile-Card/" target="_blank"> Click Here To Contact
+                Me </a>
+
+
             <a href="#contact" class="btn">Get in Touch</a>
         </div>
+
+
     </section>
 
 
@@ -69,18 +75,25 @@
 
     <section id="services" class="services">
         <h2>Our Services</h2>
+
+
         <div class="service-card">
             <h3>Web Development</h3>
             <p>Build dynamic websites to improve your business online presence.</p>
         </div>
+
+
         <div class="service-card1">
             <h3>Mobile App Development</h3>
             <p>Design and develop mobile apps for both Android and iOS.</p>
         </div>
+
         <div class="service-card2">
             <h3>Cloud Solutions</h3>
             <p>Deploy your business to the cloud for scalability and performance.</p>
         </div>
+
+
     </section>
 
 
@@ -89,12 +102,15 @@
     <!-- Contact Form -->
 
 
-
-
-
     <section id="contact" class="contact">
+
+
         <h2>Contact Us</h2>
+
+
         <form action="#" method="POST">
+
+            
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
 
@@ -105,21 +121,28 @@
             <textarea id="message" name="message" required></textarea>
 
             <button type="submit" class="btn">Send Message</button>
+        
         </form>
+
+
     </section>
-
-
 
 
     <!-- Footer -->
 
 
-
-
     <footer>
-        <p>&copy; 2025 Amit Infotech by ®️ Amit Thakur. All rights reserved.</p>
+
+        <p>&copy; 2025 AMIT INFOTECH by ®️ Amit Thakur Hey ✌️Nice to Meet You. All rights reserved.</p>
+
     </footer>
 
+
+
+
+
+
 </body>
+
 
 </html>
